# KBD

./: .gitignore  CMakeLists.txt  README.md  compile.bat  compile.sh  compile_and_run.bat  compile_and_run.sh  depthquality_2024-07-04.csv  experiment.ipynb  experiments.py  export.py  fitting.ipynb  fitting.py  main.cpp  main.py  main_debug.cpp  run.bat  run.ps1  run.sh  segmented_linear_model.py  test_main.cpp  transform.ipynb  transform.py  verification.py  xlsx_to_csv.py
KBD/: _deprecated.txt  apis.py  constants.py  core.py  eval.py  helpers.py  kernels.py  models.py  optimizers.py  parser.py  plotters.py  utils.py  verification.py
configs/: KBD_condig.yaml  KBD_config.json
database/: db.py
src/: array.h  config.h  csv.cpp  csv.h  eigen_format.h  eigen_io.h  eigen_utils.h  factory.cpp  factory.h  format.h  linear_reg.h  model.h  nelder_mead.h  optimizer.h  shared.h  table.cpp  table.h  utils.cpp  utils.h  workflow.cpp  workflow.h
src/ops/: modifier.cpp  modifier.h  multi_threads.cpp  multi_threads.h
test/: segmented_linear_KBD_params.json  test.json  test_ceres_solver.cpp  test_depth.raw  test_depth_transform.m  test_eigen_io.cpp  test_fmt_print.cpp  test_json.cpp  test_linear_regression.cpp  test_main.cpp  test_main.m  test_nelder_mead.cpp  test_workflow.cpp
